
CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-2.0-beta3
##### Pending changes for Next Release
########################################################################################## 

2/24/2011
=========
#1071666  - Missing page titles

2/23/2011
=========
#1070640  - Make Branding & Menu regions "real" regions
#1070628  - Restructure Menu Options/Rendering
#1066444  - Would it be possible to add an "active-trail" class for drop-down menus?

2/20/2011
=========
#1067694  - HTML5 additions to Reset CSS
#1065270  - Strict warning: Creating default object from empty value

2/17/2011
=========
#0000000  - Adding an XHTML Starterkit for those that don't want to use HTML5
#0000000  - Make the screenshot.png files in core & starterkits more obvious


##########################################################################################
##### Changes in: 7.x-2.0-beta2
########################################################################################## 

2/16/2011
=========
#1061500  - FIXING: Additional Region Classes not being Applied
#1063780  - Add first/last & zebra classes to the regions in a zone
#1062418  - Zebra class + first/last classes for blocks
#1062780  - PHP warnings when posting a comment

##########################################################################################
##### Changes in: 7.x-2.0-beta2
########################################################################################## 

2/15/2011
=========
#1061500  - Additional Region Classes not being Applied

2/14/2011
=========
#1060732  - Fix E_NOTICE errors
#1061026  - Undefined index: menu_data in include() and missing debug_blocks.js

##########################################################################################
##### Changes in: 7.x-2.0-beta1
########################################################################################## 
