@@ -41,35 +41,11 @@
   display: inline;
 }
 #user-container .block-user .form-submit {
-  background: none;
-  border: none;
-  background: url('../i/login.png') no-repeat top left;
-  text-indent: -2000em;
-  height: 24px;
-  width: 24px;
   display: none;
 }
-/* LOGIN BLOCK AWESOMESAUCE */
-/*
-#user-login-form #edit-name {
-  background: #f5f5f5 url('../i/login-text.png') no-repeat center left;
-}
-#user-login-form #edit-pass {
-  background: #f5f5f5 url('../i/password-text.png') no-repeat center left;
-}
-*/
+
 #user-container .block-search {
   text-align: right;
   padding-top: 4px;
   padding-bottom: 4px;
-}
-#user-container .block-search .form-submit {
-  background: none;
-  border: none;
-  background: url('../i/search.png') no-repeat top left;
-  text-indent: -2000em;
-  height: 24px;
-  width: 24px;
-  cursor: pointer;
-  display: inline;
 }
